--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,6 +1,6 @@
 header{
     min-height: 800px;
-    background-image: url(/img/Header/mainscreen_1.png);
+    background-image: url(../img/Header/mainscreen_1.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
