--- a/css/style.css
+++ b/css/style.css
@@ -765,7 +765,7 @@ template {
 }
 header {
   min-height: 800px;
-  background-image: url(/img/Header/mainscreen_1.png);
+  background-image: url(../img/Header/mainscreen_1.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
