--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -43,6 +43,11 @@
                         color: #924851;
                         }
                     }
+                    @media screen and (max-width: 576px) {
+                        font-weight: 500;
+                        font-size: 16px;
+                        line-height: 19px;
+                    }
                 @media screen and (max-width: 576px) {
                     max-width: 200px;
                    
