--- a/scss/_formApp.scss
+++ b/scss/_formApp.scss
@@ -3,6 +3,7 @@
     display: flex;
         .formApp-container{
             display: flex; 
+            margin: 0 auto;
                 .formApp-content{
                     background-color: #F9F5F1;
                     display: flex;
